--- a/app/package.json
+++ b/app/package.json
@@ -10,12 +10,16 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
+    "bnc-onboard": "^1.10.3",
     "bootstrap": "^4.5.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.2.2",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "typescript": "^3.9.7"
+    "typescript": "^3.9.7",
+    "web3": "^1.2.11"
   },
   "scripts": {
     "start": "react-scripts start",
